# calendar-agent-tutorial

./: .gitignore  README.md  examples.sh  main.py  pyproject.toml
.devcontainer/: devcontainer.json
app/: agent.py  auth.py  cli.py  config.py  google_calendar.py  logger.py  prompt.py  tools.py
