[project]
name = "calendar-agent-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.184.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain==1.0.0a12",
    "langchain-google-genai>=3.0.0a1",
    "pydantic-settings>=2.11.0",
    "typer>=0.19.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "google-api-python-client-stubs>=1.30.0",
    "ruff>=0.14.0",
]

[project.scripts]
cal = "app.cli:app"
